style.css
body {
    background: url(bg.png) no-repeat 0px 0px fixed; 
    background-color: #010101;

    font-family: "Poppins", sans-serif;
    font-size: 50px;

    width: 100%;
    height: 100%;
    position: fixed;
    z-index: -1;
}

.header {
    position: absolute;
    top: 55px;
    z-index: 3;
}

.header h5 { color: #d3d3d3; }
.header h6 {
    margin-top: -18px;
    color: #505050;
}

.about_link {
    font-size: 30%;
}

.about_container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    background-color: #141414;
    z-index: 1;
    
    opacity: 0;
    transition: opacity 0.45s ease-in-out;
}

.about {
    position: relative;
    top: 220px;
    left: 0;
    width: 100%;
    height: 100%;

    background: #141414;
    overflow-x: hidden;
    z-index: 2;

    color: #707070;
    font-size: 30%;
    font-family: "Roboto", sans-serif;
}

.about strong {
    color: #ffffff;
    font-weight: 400;
}

.about .text {
    position: relative;
    top: 0px;
    width: 60vw;
    float: left;

    line-height: 25px;
    letter-spacing: 1px;
}

.about .links {
    margin-left: 80px;
    float: left;
    position: relative;
    left: 120px;
    width: 250px;
}

.about .links h5 {
    color: #d3d3d3;
    font-size: 130%;
    letter-spacing: 2px;
}

.about .links h5:before {
    content: '';
    display: block;
    position: absolute;
    width: 40px;
    height: 1px;
    left: -54px;
    top: 16px;
    background-color: #575757;
}

/*Слагаме размер на шрифта в зависимост от ширината на екрана, 
  така че да се чете по-лесно на разлините видове екрани*/
@media screen and (min-width: 200px) {
    body { font-size: 32px; margin-left: 20px }
    .about { margin-left: 20px }
    .about .links { left: 20px; }
}
@media screen and (min-width: 300px) {
    body { font-size: 40px; margin-left: 30px }
    .about { margin-left: 30px }
    .about .links { left: 30px; }
}
@media screen and (min-width: 600px) {
    body { font-size: 45px; margin-left: 40px  }
    .about { margin-left: 40px }
    .about .links { left: 40px; }
}
@media screen and (min-width: 1000px) {
    body { font-size: 55px; margin-left: 50px  }
    .about { margin-left: 50px }
    .about .links { left: 50px; }
}
@media screen and (min-width: 1400px) {
    body { font-size: 60px; margin-left: 60px  }
    .about { margin-left: 60px }
    .about .links { left: 60px; }
}
@media screen and (min-width: 1600px) {
    body { font-size: 65px; margin-left: 70px  }
    .about { margin-left: 70px }
    .about .links { left: 70px; }
}
@media screen and (min-width: 1800px) {
    body { font-size: 70px; margin-left: 80px  }
    .about { margin-left: 80px }
    .about .links { left: 80px; }
}

@media only screen and (max-width: 720px) {
    .about .text {
        width: 72%;
    }
}

h5, h6 {
    margin: 0 0 10px;
    font-weight: 700;
}

h5 {
    letter-spacing: 0.25rem;
    font-size: 45%;
    line-height: 32px;
}

h6 {
    letter-spacing: 0.15rem;
    font-size: 30%;
}

/*Това дава готина анимация на хипервръзките,
  когато се посочат с мишка*/
a.link {
    color: #FFFFFF;
   
    font-family: "Roboto";
    font-weight: 400;
   
    letter-spacing: 0.0625rem;
    line-height: 1.5625rem;
   
    cursor: pointer;
    position: relative;
    text-decoration: none;
    display: inline-block; 
}
   
/*Използваме два правоъгълника под текста, които имат
  transition на смаляване и уголемяване*/
a.link:before {
    background-color: #FFFFFF;
    content: '';

    bottom: 2px;
    left: 0;
    width: 0%;
    height: 1px;

    transition: width 0.3s ease-in-out; 

    position: absolute;
    display: block;
}

a.link:after {
    background-color: #FFFFFF;
    content: '';

    bottom: 2px;
    right: 0;
    width: 100%;
    height: 1px;

    transition: width 0.3s ease-in-out 0.15s; 

    position: absolute;
    display: block;
}

a.link:hover:before {
    width: 100%;
    transition: width 0.3s ease-in-out 0.15s; 
}

a.link:hover:after {
    width: 0%;
    transition: width 0.3s ease-in-out; 
}

